feat: impl main logic service mvp (without local tests)
